# Retrieval-based-Voice-Conversion-WebUI

./: .gitignore  =0.12.1  AGENTS.md  CHANGELOG.md  FUNCTION_COMPARISON_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_IMPLEMENTATION_DEMO.md  MODEL_TEST_VERIFICATION.md  PYTHON_RUST_ALIGNMENT_REPORT.md  REALTIME_COMPARISON.md  RVC_MODEL_TEST_README.md  RVC_RUST_FINAL_SUMMARY.md  RVC_RUST_IMPLEMENTATION_COMPLETE.md  TENSOR_SAFETY_FIX_REPORT.md  generate_real_test_case.py  generate_simple_test_case.py  generate_test_case.py  gui_v1.py  launch_rvc_rust.py  run_model_test.py  test_case_metadata.json  test_case_real_metadata.json  test_python_rvc.py  test_rvc_config.py
rvc-rs/rvc-lib/: Cargo.toml  README.md
rvc-rs/rvc-lib/examples/: test_realtime.rs
rvc-rs/rvc-lib/src/: audio_pipeline.rs  audio_utils.rs  devices.rs  f0_estimation.rs  faiss_index.rs  generator.rs  gui.rs  harvest.rs  hubert.rs  infer_faithful.rs  inference.rs  lib.rs  model_loader.rs  pytorch_loader.rs  realtime.rs  rvc_for_realtime.rs
rvc-rs/rvc-lib/tests/: audio_callback_tests.rs  comprehensive_f0_tests.rs  f0_cases.rs  f0_method_comparison.rs  harvest_debug.rs  infer_tests.rs  model_inference_test.rs  phase_vocoder_case.rs  streaming_tests.rs
rvc-rs/rvc-lib/tests/data/: amplitude_modulated_220hz_meta.json  amplitude_modulated_220hz_signal.json  chirp_100_500hz_f0.json  chirp_100_500hz_meta.json  chirp_100_500hz_signal.json  edge_freq_1099hz_f0.json  edge_freq_1099hz_meta.json  edge_freq_1099hz_signal.json  edge_freq_51hz_f0.json  edge_freq_51hz_meta.json  edge_freq_51hz_signal.json  gen_test_data.py  (+45 more)
(+38 files in other folders)
