[package]
name = "rvc-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
realfft = "3.5"
rsworld-sys = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = { version = "0.16", default-features = false }
once_cell = "1"

