[package]
name = "rvc-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
realfft = "3.5"
rsworld-sys = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = { version = "0.16", default-features = false }
once_cell = "1"
tch = { version = "0.20", features = ["download-libtorch"] }
anyhow = "1.0"
thiserror = "1.0"
ndarray = "0.16"
numpy = "0.21"
hound = { version = "3.5", optional = true }
byteorder = "1.5"
memmap2 = "0.9"
rayon = "1.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
hound = ["dep:hound"]
faiss = []


[[example]]
name = "test_complete_pipeline"
path = "../examples/test_complete_pipeline.rs"

[[example]]
name = "test_fix_verification"
path = "../examples/test_fix_verification.rs"

[[example]]
name = "test_progress_logging"
path = "../examples/test_progress_logging.rs"
